--- a/Predict-Future-Sales/requirements.txt
+++ b/Predict-Future-Sales/requirements.txt
@@ -76,7 +76,7 @@ pyzmq==17.1.0
 QtAwesome==0.4.4
 qtconsole==4.3.1
 QtPy==1.4.2
-requests==2.19.1
+requests>=2.20.0
 rope==0.10.7
 scikit-learn==0.19.2
 scipy==1.1.0
