--- a/Predict-Future-Sales/requirements.txt
+++ b/Predict-Future-Sales/requirements.txt
@@ -47,7 +47,7 @@ mccabe==0.6.1
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
-notebook==5.6.0
+notebook>=5.7.2
 numpy==1.15.0
 numpydoc==0.8.0
 packaging==17.1
