--- a/Predict-Future-Sales/requirements.txt
+++ b/Predict-Future-Sales/requirements.txt
@@ -71,7 +71,7 @@ pyparsing==2.2.0
 PyQt5==5.9.2
 python-dateutil==2.7.3
 pytz==2018.5
-PyYAML==3.13
+PyYAML>=3.13
 pyzmq==17.1.0
 QtAwesome==0.4.4
 qtconsole==4.3.1
