--- a/Predict-Future-Sales/requirements.txt
+++ b/Predict-Future-Sales/requirements.txt
@@ -28,7 +28,7 @@ ipywidgets==7.3.1
 isort==4.3.4
 jedi==0.12.1
 jeepney==0.3.1
-Jinja2==2.10
+Jinja2>=2.10
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.3
