--- a/Predict-Future-Sales/requirements.txt
+++ b/Predict-Future-Sales/requirements.txt
@@ -92,8 +92,8 @@ Sphinx==1.7.6
 sphinxcontrib-websupport==1.1.0
 spyder==3.3.0
 spyder-kernels==0.2.4
-tensorboard==1.9.0
-tensorflow==1.9.0
+tensorboard>=1.9.0
+tensorflow>=1.9.0
 termcolor==1.1.0
 terminado==0.8.1
 testpath==0.3.1
