--- a/Predict-Future-Sales/requirements.txt
+++ b/Predict-Future-Sales/requirements.txt
@@ -53,7 +53,7 @@ numpydoc==0.8.0
 packaging==17.1
 pandas==0.23.3
 pandocfilters==1.4.2
-parso==0.3.1
+parso<=0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
 pkg-resources==0.0.0
