--- a/Predict-Future-Sales/requirements.txt
+++ b/Predict-Future-Sales/requirements.txt
@@ -103,7 +103,7 @@ typed-ast==1.1.0
 urllib3>=1.23
 wcwidth==0.1.7
 webencodings==0.5.1
-Werkzeug==0.14.1
+Werkzeug>=0.14.1
 widgetsnbextension==3.3.1
 wrapt==1.10.11
 xgboost==0.72.1
