--- a/ADCB-Assessment-2025/pyproject.toml
+++ b/ADCB-Assessment-2025/pyproject.toml
@@ -12,11 +12,13 @@ dependencies = [
     "imblearn>=0.0",
     "jupyter>=1.1.1",
     "lightgbm>=4.6.0",
+    "lime>=0.2.0.1",
     "loguru>=0.7.3",
     "numpy>=2.3.5",
     "pandas>=2.3.3",
     "pandoc>=2.4",
     "scikit-learn>=1.8.0",
+    "shap>=0.49.1",
     "uvicorn>=0.38.0",
     "xgboost>=3.1.2",
     "xlrd>=2.0.2",
